--- a/app/views/skills/index.html
+++ b/app/views/skills/index.html
@@ -1,10 +1,17 @@
 <html>
 <head>
+  <title>Skills</title>
+  <%= stylesheet_link_tag "sessions", :media => "all" %>
 </head>
 
 <body>
+  <div class="skills">
+    Angelskills page in progress
+    <br />
+  </div>
+
   <div>
-    <p>yay, stay tuned!</p>
+    <p><%= link_to "Login with LinkedIn", "/auth/linkedin" %></p>
   </div>
 </body>
 </html>
