stuff and stuff

--- a/app/views/skills/index.html.erb
+++ b/app/views/skills/index.html.erb
@@ -13,7 +13,7 @@
     Welcome <%= current_user.name %>!
       <%= link_to "Sign Out", logout_path %>
     <% else %>
-      <%= link_to "Login with LinkedIn", 'auth/linkedin' %>
+      <%= link_to "Login via LinkedIn", 'auth/linkedin' %>
     <% end %>
   </div>
 
